# backend/src/routes/index.js
@@ -7,6 +7,7 @@ import categoryRoutes from './category.routes.js';
 import productRoutes from './product.routes.js';
 import reviewRoutes from './review.routes.js';
 import cartRoutes from './cart.routes.js';
+import wishlistRoutes from './wishlist.routes.js';
 
 const router = express.Router();
 
@@ -17,5 +18,6 @@ router.use('/categories', categoryRoutes);
 router.use('/products', productRoutes);
 router.use('/reviews', reviewRoutes);
 router.use('/cart', cartRoutes);
+router.use('/wishlist', wishlistRoutes);
 
 export default router;
